--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,6 @@ services:
       - TZ="Asia/Tokyo"
     ports:
       - 3306:3306
-    command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci --skip-character-set-client-handshake
+    command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci --skip-character-set-client-handshake --default_authentication_plugin=mysql_native_password
     volumes:
       - ./database:/docker-entrypoint-initdb.d # docker-entrypoint-initdb.d内のスクリプトは起動時に1度だけ実行される
