--- a/docker-images-react/package.json
+++ b/docker-images-react/package.json
@@ -22,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prod": "GENERATE_SOURCEMAP=false react-scripts build --production && serve -s build -l 3000"
   },
   "browserslist": {
     "production": [
