--- a/docker-images-flask/uwsgi.ini
+++ b/docker-images-flask/uwsgi.ini
@@ -1,5 +1,5 @@
 [uwsgi]
-wsgi-file = /var/www/src/run.py
+wsgi-file = /home/ec2-user/strongest-news-react-flask-mysql/docker-images-flask/src/run.py
 callable = app
 master = true
 processes = 1
