--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,30 +2,30 @@ version: "3.7"
 services:
   flask-api:
     build:
-      context: ./docker-images-flask
+      context: ./flask
       dockerfile: Dockerfile
     ports:
       - 3031:3031
     volumes:
-      - ./docker-images-flask:/var/www/
+      - ./flask:/var/www/
   nginx:
     build:
-      context: ./docker-images-nginx
+      context: ./nginx
       dockerfile: Dockerfile
     volumes:
-      - ./docker-images-nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./docker-images-nginx/log:/var/log/nginx/
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/log:/var/log/nginx/
     links:
       - flask-api
     ports:
       - 5000:80
   react-client:
     build:
-      context: ./docker-images-react
+      context: ./react
       dockerfile: Dockerfile
       target: dev
     volumes:
-      - ./docker-images-react:/usr/src/app
+      - ./react:/usr/src/app
       - /usr/src/app/node_modules
     ports:
       - 80:3000
